Bug 121177 - "no" button in window of confirm erase cd-rw disc not working
Summary: "no" button in window of confirm erase cd-rw disc not working
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR grave
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-01 21:34 UTC by Anton
Modified: 2006-09-13 19:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton 2006-02-01 21:34:15 UTC
Version:           0.12.10 (using KDE KDE 3.5.1)
Installed from:    Ubuntu Packages
OS:                Linux

"no" button in window "found rewritable disk Should it be erased?" not working
Comment 1 Sebastian Trueg 2006-02-02 16:56:48 UTC
this is a duplicate of some bug already reported and is caused by automounting.
Comment 2 Christoph Burger-Scheidlin 2006-09-13 00:12:16 UTC
can this be closed (it not being a problem with k3b as such) or should it be kept open to remind developers of this issue?
Comment 3 Sebastian Trueg 2006-09-13 19:31:34 UTC
SVN commit 583863 by trueg:

Try unmounting the device before ejecting. Maybe a wrapper method would be better, one that
always unmounts before ejecting.
This is one step but is not guranteed to work all the time.

BUG: 121177


 M  +5 -0      k3bemptydiscwaiter.cpp  


--- trunk/extragear/multimedia/k3b/src/k3bemptydiscwaiter.cpp #583862:583863
@@ -349,6 +349,7 @@
 	}
 	else {
 	  kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no DVD+RW overwrite" << endl;
+	  K3b::unmount( d->device );
 	  K3bDevice::eject( d->device );
 	  continueWaiting();
 	}
@@ -418,6 +419,7 @@
 	}
 	else {
 	  kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no DVD-RW overwrite." << endl;
+	  K3b::unmount( d->device );
 	  K3bDevice::eject( d->device );
 	  continueWaiting();
 	}
@@ -499,6 +501,7 @@
       }
       else {
 	kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no DVD-RW formatting." << endl;
+	K3b::unmount( d->device );
 	K3bDevice::eject( d->device );
 	continueWaiting();
       }
@@ -573,6 +576,7 @@
     }
     else {
       kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no CD-RW overwrite." << endl;
+      K3b::unmount( d->device );
       K3bDevice::eject( d->device );
       continueWaiting();
     }
@@ -630,6 +634,7 @@
 
 void K3bEmptyDiscWaiter::slotUser2()
 {
+  K3b::unmount( d->device );
   K3bDevice::eject( d->device );
 }