Try unmounting the device before ejecting. Maybe a wrapper method would be better, one that always unmounts before ejecting. This is one step but is not guranteed to work all the time.

BUG: 121177

svn path=/trunk/extragear/multimedia/k3b/; revision=583863