src/k3bemptydiscwaiter.cpp
@@ -349,6 +349,7 @@ void K3bEmptyDiscWaiter::slotMediumChanged( K3bDevice::Device* dev )
 	}
 	else {
 	  kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no DVD+RW overwrite" << endl;
+	  K3b::unmount( d->device );
 	  K3bDevice::eject( d->device );
 	  continueWaiting();
 	}
@@ -418,6 +419,7 @@ void K3bEmptyDiscWaiter::slotMediumChanged( K3bDevice::Device* dev )
 	}
 	else {
 	  kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no DVD-RW overwrite." << endl;
+	  K3b::unmount( d->device );
 	  K3bDevice::eject( d->device );
 	  continueWaiting();
 	}
@@ -499,6 +501,7 @@ void K3bEmptyDiscWaiter::slotMediumChanged( K3bDevice::Device* dev )
       }
       else {
 	kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no DVD-RW formatting." << endl;
+	K3b::unmount( d->device );
 	K3bDevice::eject( d->device );
 	continueWaiting();
       }
@@ -573,6 +576,7 @@ void K3bEmptyDiscWaiter::slotMediumChanged( K3bDevice::Device* dev )
     }
     else {
       kdDebug() << "(K3bEmptyDiscWaiter) starting devicehandler: no CD-RW overwrite." << endl;
+      K3b::unmount( d->device );
       K3bDevice::eject( d->device );
       continueWaiting();
     }
@@ -630,6 +634,7 @@ void K3bEmptyDiscWaiter::slotUser1()
 
 void K3bEmptyDiscWaiter::slotUser2()
 {
+  K3b::unmount( d->device );
   K3bDevice::eject( d->device );
 }
 
